// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Matrix Input Forms 1`] = `
Array [
  0.7,
  0,
  0.17,
  0,
  0.7,
  0.12035,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 2`] = `
Array [
  0.7,
  0,
  0.298,
  0,
  0.7,
  0.1046,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 3`] = `
Array [
  0.7,
  0,
  0.17,
  0,
  0.7,
  -0.08325,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Matrix Input Forms 4`] = `
Array [
  0.7,
  0,
  0.298,
  0,
  0.7,
  -0.099,
  0,
  0,
  1,
]
`;
